--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,94 +1,98 @@
 {
-	"_version": "1.12.0",
-	"sap.app": {
-		"id": "sap.ui.demo.fiori2",
-		"type": "application",
-		"applicationVersion": {
-			"version": "1.0.0"
-		}
-	},
-	"sap.ui5": {
-		"rootView": {
-			"viewName": "sap.ui.demo.fiori2.view.App",
-			"type": "XML",
-			"async": true,
-			"id": "fcl"
-		},
-		"dependencies": {
-			"minUI5Version": "1.98.0",
-			"libs": {
-				"sap.ui.core": {},
-				"sap.m": {},
-				"sap.f": {},
-				"sap.uxap": {}
-			}
-		},
-		"config": {
-			"fullWidth": true
-		},
-		"routing": {
-			"config": {
-				"routerClass": "sap.f.routing.Router",
-				"type": "View",
-				"viewType": "XML",
-				"path": "sap.ui.demo.fiori2.view",
-				"controlId": "flexibleColumnLayout",
-				"transition": "slide",
-				"bypassed": {
-				},
-				"async": true
-			},
-			"routes": [
-				{
-					"pattern": "page2",
-					"name": "page2",
-					"target": "page2",
-					"layout": "EndColumnFullScreen"
-				},
-				{
-					"pattern": ":layout:",
-					"name": "master",
-					"target": [
-						"master",
-						"detail"
-					]
-				},
-				{
-					"pattern": "detail/{product}/{layout}",
-					"name": "detail",
-					"target": [
-						"master",
-						"detail"
-					]
-				},
-				{
-					"pattern": "detail/{product}/detailDetail/{supplier}/{layout}",
-					"name": "detailDetail",
-					"target": [
-						"master",
-						"detail",
-						"detailDetail"
-					]
-				}
-			],
-			"targets": {
-				"master": {
-					"name": "Master",
-					"controlAggregation": "beginColumnPages"
-				},
-				"detail": {
-					"name": "Detail",
-					"controlAggregation": "midColumnPages"
-				},
-				"detailDetail": {
-					"name": "DetailDetail",
-					"controlAggregation": "endColumnPages"
-				},
-				"page2": {
-					"name": "AboutPage",
-					"controlAggregation": "endColumnPages"
-				}
-			}
-		}
-	}
+    "_version": "1.12.0",
+    "sap.app": {
+        "id": "sap.ui.demo.fiori2",
+        "type": "application",
+        "applicationVersion": {
+            "version": "1.0.0"
+        },
+        "sourceTemplate": {
+            "id": "@sap/ux-app-migrator:freestyle",
+            "version": "1.8.3",
+            "toolsId": "23142308-d15f-4b24-9dc5-ca5894bc2125"
+        }
+    },
+    "sap.ui5": {
+        "rootView": {
+            "viewName": "sap.ui.demo.fiori2.view.App",
+            "type": "XML",
+            "async": true,
+            "id": "fcl"
+        },
+        "dependencies": {
+            "minUI5Version": "1.98.0",
+            "libs": {
+                "sap.ui.core": {},
+                "sap.m": {},
+                "sap.f": {},
+                "sap.uxap": {}
+            }
+        },
+        "config": {
+            "fullWidth": true
+        },
+        "routing": {
+            "config": {
+                "routerClass": "sap.f.routing.Router",
+                "type": "View",
+                "viewType": "XML",
+                "path": "sap.ui.demo.fiori2.view",
+                "controlId": "flexibleColumnLayout",
+                "transition": "slide",
+                "bypassed": {},
+                "async": true
+            },
+            "routes": [
+                {
+                    "pattern": "page2",
+                    "name": "page2",
+                    "target": "page2",
+                    "layout": "EndColumnFullScreen"
+                },
+                {
+                    "pattern": ":layout:",
+                    "name": "master",
+                    "target": [
+                        "master",
+                        "detail",
+                        "detailDetail"
+                    ]
+                },
+                {
+                    "pattern": "detail/{product}/{layout}",
+                    "name": "detail",
+                    "target": [
+                        "master",
+                        "detail"
+                    ]
+                },
+                {
+                    "pattern": "detail/{product}/detailDetail/{supplier}/{layout}",
+                    "name": "detailDetail",
+                    "target": [
+                        "master",
+                        "detail"
+                    ]
+                }
+            ],
+            "targets": {
+                "master": {
+                    "name": "Master",
+                    "controlAggregation": "beginColumnPages"
+                },
+                "detail": {
+                    "name": "Detail",
+                    "controlAggregation": "midColumnPages"
+                },
+                "detailDetail": {
+                    "name": "DetailDetail",
+                    "controlAggregation": "endColumnPages"
+                },
+                "page2": {
+                    "name": "AboutPage",
+                    "controlAggregation": "endColumnPages"
+                }
+            }
+        }
+    }
 }
